--- a/src/styles/swiper.scss
+++ b/src/styles/swiper.scss
@@ -1,6 +1,11 @@
 
 .swiper-container {
   --swiper-navigation-color: #FFBA08;
+  --swiper-navigation-size: 16px;
+
+  @media (min-width: 62em) {
+    --swiper-navigation-size: 30px;
+  }
 }
 
 .swiper-slide {
@@ -9,30 +14,56 @@
 }
 
 .swiper-pagination {
-  margin-bottom: 0.5rem;
   &-bullet {
-    width: 1rem;
-    height: 1rem;
-    margin: 0 0.5rem !important;
     background-color: #999999;
     box-shadow: 3px 3px 6px 0px rgba($color: #000000, $alpha: 0.5);
     opacity: 1;
+    
+    @media (min-width: 62em) {
+      width: 16px;
+      height: 16px;
+      margin: 0 8px !important;
+    }
+    
     &-active {
       background-color: #FFBA08;
     }
+  }
+
+  @media (min-width: 62em) {
+    bottom: 16px !important;
   }
 }
 
 .swiper-button {
   &-next {
-    right: 2rem;
+    right: 24px;
+
+    @media (min-width: 62em) {
+      right: 32px;
+    }
   }
+
   &-prev {
-    left: 2rem;
+    left: 24px;
+
+    @media (min-width: 62em) {
+      left: 32px;
+    }
   }
 
   &-next, &-prev {
     text-shadow: 3px 3px 6px rgba($color: #000000, $alpha: 0.5);
     font-weight: bold;
+    top: 50%;
+    transform: translateY(-50%);
+
+    &::after {
+      padding: 8px 12px;
+
+      @media (min-width: 62em) {
+        padding: 12px 16px;
+      }
+    }
   }
 }
